Improve UI with more defined colors and fonts

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Poetry Critic" />
     <link rel="stylesheet" href="https://use.typekit.net/rtr2vsr.css">
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/style.css">
     <title>Poetry Critic</title>
 </head>
