--- a/src/main/webapp/poem.html
+++ b/src/main/webapp/poem.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/rtr2vsr.css">
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/style.css">
     <title>Poem</title>
 </head>
@@ -25,23 +26,31 @@
             <a href="/about.html" class="btn btn-link">About This Project</a>
         </section>
     </header>
-    <div class="main-content">
+    <div class="main-content main-content-poem-view">
         <section class="poem-content"></section>
-        <section class="annotations-content"></section>
+        <section class="annotations-content hidden">
+            <div class="close-section">
+                <span class="material-icons">close</span>
+            </div>
+            <div class="annotations-content-text"></div>
+        </section>
         <section class="add-annotation hidden">
+            <div class="close-section">
+                <span class="material-icons">close</span>
+            </div>
             <form class="form-group" id="new-annotation-form">
-                <label class="form-label" for="annotationText">New Annotation</label>
+                <label class="form-label" for="annotationText">Add a new annotation</label>
                 <textarea class="form-input annotation-textarea" placeholder="This line is about..." rows="3"
                     name="annotationText" id="annotationText" required="true"></textarea>
-                <div class="form-buttons">
-                    <button class="btn" id="annotation-discard-btn">Discard</button>
+                <div class="form-buttons-container">
+                    <input type="reset" class="btn discard-button" id="annotation-discard-btn" value="Discard" />
                     <button class="btn btn-primary" id="annotation-submit-btn">Submit</button>
                 </div>
             </form>
         </section>
     </div>
-    <script type="module" src="js/PoemData.js"></script>
-    <script src="js/AddAnnotation.js"></script>
+    <script defer type="module" src="js/PoemData.js"></script>
+    <script defer type="module" src="js/AddAnnotation.js"></script>
 </body>
 
 </html>
