--- a/src/main/webapp/poem.html
+++ b/src/main/webapp/poem.html
@@ -32,6 +32,7 @@
             <div class="close-section">
                 <span class="material-icons">close</span>
             </div>
+            <p class="annotator-name"></p>
             <div class="annotations-content-text"></div>
         </section>
         <section class="add-annotation hidden">
